--- a/app/views/users/verify.html.erb
+++ b/app/views/users/verify.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
-    <title>Welcome to thebox</title>
+    <title>Welcome.</title>
     <%= stylesheet_link_tag :all %>
     <%= javascript_include_tag :defaults %>
     <%= csrf_meta_tag %>
@@ -10,9 +10,7 @@
   <body>
     <h1>Welcome to thebox.</h1>
     <p>
-    When signing in thebox, use <%= @user.email %> to access your items.
+    When signing in, use <%= @user.email %> to access your data.
     </p>
-    <p>
-    <p>Thanks for becoming part of thebox!</p>
   </body>
 </html>
