~ updated templates to remove any reference to thebox

--- a/app/views/users/verify.html.erb
+++ b/app/views/users/verify.html.erb
@@ -8,7 +8,7 @@
     <%= csrf_meta_tag %>
   </head>
   <body>
-    <h1>Welcome to thebox.</h1>
+    <h1>Welcome.</h1>
     <p>
     When signing in, use <%= @user.email %> to access your data.
     </p>
