~ clarified verify message to include reference to residence

--- a/app/views/email_verification_mailer/verify.html.erb
+++ b/app/views/email_verification_mailer/verify.html.erb
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type" />
   </head>
   <body>
-    <h1>Thank you <%= @user.email %> for signing up</h1>
+    <h1>Thank you <%= @user.email %> for signing up.</h1>
     <p>
 			To have future access to your data, please verify it is indeed you who created a new account.
     </p>
