--- a/app/views/users/verify.html.erb
+++ b/app/views/users/verify.html.erb
@@ -10,7 +10,7 @@
   <body>
     <h1>Welcome.</h1>
     <p>
-    When signing in, use <%= @user.email %> to access your data.
+    When signing in from your residence, use <%= @user.email %> to access your data.
     </p>
   </body>
 </html>
